add a non-prefixed property to the test fixture

--- a/test/fixtures/prefix.out.css
+++ b/test/fixtures/prefix.out.css
@@ -1,1 +1,1 @@
-body {border-radius: 5px 10px; -webkit-border-radius: 5px 10px; -moz-border-radius: 5px 10px;}
+#logo {border-radius: 5px 10px; color: red; -webkit-border-radius: 5px 10px; -moz-border-radius: 5px 10px;}
