--- a/test/fixtures/keyframes.out.css
+++ b/test/fixtures/keyframes.out.css
@@ -1,8 +1,6 @@
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+@keyframes fade { 
+  from { opacity: 0; } 
+  to { opacity: 1; } 
 }
+@-moz-keyframes fade {fromopacity: 0; toopacity: 1;}
+@-webkit-keyframes fade {fromopacity: 0; toopacity: 1;}
