--- a/test/fixtures/keyframes.props.out.css
+++ b/test/fixtures/keyframes.props.out.css
@@ -2,5 +2,11 @@
   from { border-radius: 5px; } 
   to { border-radius: 10px; } 
 }
-@-moz-keyframes fade {fromborder-radius: 5px; -moz-border-radius: 10px; toborder-radius: 10px;}
-@-webkit-keyframes fade {fromborder-radius: 5px; -webkit-border-radius: 10px; toborder-radius: 10px;}
+@-moz-keyframes fade { 
+  from { border-radius: 5px; -moz-border-radius: 5px; } 
+  to { border-radius: 10px; -moz-border-radius: 10px; } 
+}
+@-webkit-keyframes fade { 
+  from { border-radius: 5px; -webkit-border-radius: 5px; } 
+  to { border-radius: 10px; -webkit-border-radius: 10px; } 
+}
