--- a/examples/sink.css
+++ b/examples/sink.css
@@ -1,3 +1,8 @@
+@keyframes animation {
+  from { opacity: 0; border-radius: 5px }
+  to { opacity: 1; border-radius: 5px }
+}
+
 #dialog {
   position: fixed;
   left: 50%;
