add failing url() test

--- a/test/fixtures/url.out.css
+++ b/test/fixtures/url.out.css
@@ -19,3 +19,9 @@ body {
   font-weight: normal;
   font-style: normal
 }
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+  #logo {
+  background-image: url("http://example.com/core/logo@2x.png")
+}
+}
