--- a/test/fixtures/url.css
+++ b/test/fixtures/url.css
@@ -19,3 +19,9 @@ body {
   font-weight: normal;
   font-style: normal
 }
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+  #logo {
+    background-image: url("/core/logo@2x.png")
+  }
+}
