add background-size: contain to at2x
for now, i dont think this works in older IEs

--- a/examples/at2x.css
+++ b/examples/at2x.css
@@ -1,3 +1,5 @@
 .logo {
-  background-image: url('/public/images/logo.png');
+  background-image: url('component.png');
+  width: 289px;
+  height: 113px;
 }
