--- a/test/fixtures/at2x-complex.out.css
+++ b/test/fixtures/at2x-complex.out.css
@@ -10,12 +10,14 @@
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5 or -moz-min-device-pixel-ratio: 1.5) {
   .logo {
-  background-image: url("/public/images/logo@2x.png")
+  background-image: url("/public/images/logo@2x.png");
+  background-size: contain
 }
 }
 
 @media all and (min-width: 600px) and (-webkit-min-device-pixel-ratio: 1.5 or -moz-min-device-pixel-ratio: 1.5) {
   .logo {
-  background-image: url("/public/images/logo-tablet@2x.png")
+  background-image: url("/public/images/logo-tablet@2x.png");
+  background-size: contain
 }
 }
