--- a/test/fixtures/at2x.out.css
+++ b/test/fixtures/at2x.out.css
@@ -4,6 +4,7 @@
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5 or -moz-min-device-pixel-ratio: 1.5) {
   .logo {
-  background-image: url("/public/images/logo@2x.png")
+  background-image: url("/public/images/logo@2x.png");
+  background-size: contain
 }
 }
