--- a/examples/extend-nesting.css
+++ b/examples/extend-nesting.css
@@ -11,8 +11,12 @@
   color: rgba(255,255,255,.5);
 }
 
-button,
 .actions a {
   extend: %dark-button;
   padding: 5px 10px;
+}
+
+button,
+input[type='submit'] {
+  extend: %dark-button;
 }
