add prefix example to media

--- a/examples/media.css
+++ b/examples/media.css
@@ -1,12 +1,14 @@
 
 @media phone {
   body {
-    background: 'green'
+    background: 'green';
+    border-radius: 5px;
   }
 }
 
 @media phone-landscape {
   body {
-    background: 'red'
+    background: 'red';
+    border-radius: 2px;
   }
 }
