add more to prefix-value test

--- a/test/fixtures/prefix-value.css
+++ b/test/fixtures/prefix-value.css
@@ -1,3 +1,8 @@
 button {
   transition: height, transform 2s, width 0.3s linear;
+  background: green;
+}
+
+@media screen {
+  transition: transform 1s
 }
