--- a/test/fixtures/prefix-value.out.css
+++ b/test/fixtures/prefix-value.out.css
@@ -1,5 +1,6 @@
 button {
   -webkit-transition: height, -webkit-transform 2s, width 0.3s linear;
   -moz-transition: height, -moz-transform 2s, width 0.3s linear;
-  transition: height, transform 2s, width 0.3s linear
+  transition: height, transform 2s, width 0.3s linear;
+  background: green
 }
