--- a/test/fixtures/colors.out.css
+++ b/test/fixtures/colors.out.css
@@ -1,13 +1,13 @@
 button {
-  background: rgba(204,204,204,0.5)
+  background: rgba(204, 204, 204, .5)
 }
 
 button {
-  border: 1px solid rgba(255,204,0,0.2)
+  border: 1px solid rgba(255, 204, 0, .2)
 }
 
 button {
-  background: rgba(255,204,0,0.2)
+  background: rgba(255, 204, 0, 0.2)
 }
 
 button {
@@ -15,5 +15,9 @@ button {
 }
 
 button {
-  background: rgba(255,255,255,0.2)
+  background: rgba(255, 255, 255, .2)
+}
+
+button {
+  background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .7))
 }
