--- a/test/fixtures/at2x.css
+++ b/test/fixtures/at2x.css
@@ -1,3 +1,8 @@
 .logo {
   background-image: url('/public/images/logo.png');
 }
+
+.banner {
+  background-image: url('/public/images/banner.png');
+  background-size: cover;
+}
