--- a/test/fixtures/easing.css
+++ b/test/fixtures/easing.css
@@ -1,4 +1,7 @@
 #logo {
   transition: all 500ms ease-out-back;
   transition: all 500ms ease-in-out-back;
+  animation: fade 2s ease-in-out-back;
+  animation-timing-function: ease-in-out-back;
+  transition-timing-function: ease-in-out-back;
 }
