--- a/test/fixtures/prefix-value.out.css
+++ b/test/fixtures/prefix-value.out.css
@@ -2,6 +2,8 @@ button {
   -webkit-transition: height, -webkit-transform 2s, width 0.3s linear;
   -moz-transition: height, -moz-transform 2s, width 0.3s linear;
   transition: height, transform 2s, width 0.3s linear;
+  background: -webkit-green;
+  background: -moz-green;
   background: green
 }
 
