--- a/test/fixtures/mixins.out.css
+++ b/test/fixtures/mixins.out.css
@@ -4,17 +4,17 @@ h1 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-align: center
+  text-align: center;
 }
 
 h2 {
-  overflow: hidden
+  overflow: hidden;
 }
 
 @media screen {
   h3 {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis
+    text-overflow: ellipsis;
   }
 }
