--- a/test/fixtures/at2x.out.css
+++ b/test/fixtures/at2x.out.css
@@ -1,22 +1,22 @@
 .logo {
-  background-image: url('/public/images/logo.png')
+  background-image: url('/public/images/logo.png');
 }
 
 .banner {
   background-image: url('/public/images/banner.png');
-  background-size: cover
+  background-size: cover;
 }
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5) {
   .logo {
     background-image: url("/public/images/logo@2x.png");
-    background-size: contain
+    background-size: contain;
   }
 }
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5) {
   .banner {
     background-image: url("/public/images/banner@2x.png");
-    background-size: cover
+    background-size: cover;
   }
 }
