--- a/test/fixtures/keyframes.out.css
+++ b/test/fixtures/keyframes.out.css
@@ -1,12 +1,12 @@
 @keyframes animation {
   from {
     opacity: 0;
-    border-radius: 5px
+    border-radius: 5px;
   }
 
   to {
     opacity: 1;
-    border-radius: 5px
+    border-radius: 5px;
   }
 }
 
@@ -14,13 +14,13 @@
   from {
     opacity: 0;
     -webkit-border-radius: 5px;
-    border-radius: 5px
+    border-radius: 5px;
   }
 
   to {
     opacity: 1;
     -webkit-border-radius: 5px;
-    border-radius: 5px
+    border-radius: 5px;
   }
 }
 
@@ -28,12 +28,12 @@
   from {
     opacity: 0;
     -moz-border-radius: 5px;
-    border-radius: 5px
+    border-radius: 5px;
   }
 
   to {
     opacity: 1;
     -moz-border-radius: 5px;
-    border-radius: 5px
+    border-radius: 5px;
   }
 }
