--- a/test/fixtures/prefix-value.out.css
+++ b/test/fixtures/prefix-value.out.css
@@ -2,13 +2,13 @@ button {
   -webkit-transition: height, -webkit-transform 2s, width 0.3s linear;
   -moz-transition: height, -moz-transform 2s, width 0.3s linear;
   transition: height, transform 2s, width 0.3s linear;
-  background: green
+  background: green;
 }
 
 @media screen {
   button {
     -webkit-transition: -webkit-transform 1s;
     -moz-transition: -moz-transform 1s;
-    transition: transform 1s
+    transition: transform 1s;
   }
 }
