--- a/test/fixtures/prefix.out.css
+++ b/test/fixtures/prefix.out.css
@@ -4,5 +4,5 @@
   border-radius: 5px;
   -webkit-box-shadow: inset 0 0 1px white;
   -moz-box-shadow: inset 0 0 1px white;
-  box-shadow: inset 0 0 1px white
+  box-shadow: inset 0 0 1px white;
 }
