--- a/test/fixtures/references.out.css
+++ b/test/fixtures/references.out.css
@@ -1,17 +1,17 @@
 button {
-  width: 120px
+  width: 120px;
 }
 
 button.round {
   width: 50px;
   height: 50px;
   line-height: 50px;
-  background-size: 50px 50px
+  background-size: 50px 50px;
 }
 
 @media screen {
   button {
     width: 80px;
-    height: 80px
+    height: 80px;
   }
 }
