Update tests accordingly.

--- a/test/fixtures/extend.css
+++ b/test/fixtures/extend.css
@@ -15,6 +15,12 @@ a.join {
   extend: .green;
 }
 
+@media screen and (min-width) {
+  body {
+    background: #fff;
+  }
+}
+
 a.button
 input[type='submit'],
 input[type='button'] {
