--- a/test/fixtures/extend.out.css
+++ b/test/fixtures/extend.out.css
@@ -14,6 +14,12 @@ a.join {
   padding: 10px 15px;
 }
 
+@media screen and (min-width) {
+  body {
+    background: #fff;
+  }
+}
+
 a.button
 input[type='submit'],
 input[type='button'] {
