fix: ignore comments in all plugins

--- a/test/fixtures/easing.css
+++ b/test/fixtures/easing.css
@@ -1,4 +1,5 @@
 #logo {
+  /* test */
   transition: all 500ms ease-out-back;
   transition: all 500ms ease-in-out-back;
   animation: fade 2s ease-in-out-back;
