--- a/test/fixtures/easing.out.css
+++ b/test/fixtures/easing.out.css
@@ -1,4 +1,5 @@
 #logo {
+  /* test */
   transition: all 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
   transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
   animation: fade 2s cubic-bezier(0.680, -0.550, 0.265, 1.550);
