fix references preceeded by punctuation. Closes #106

--- a/test/fixtures/references.css
+++ b/test/fixtures/references.css
@@ -8,6 +8,8 @@ button.round {
   height: @width;
   line-height: @height;
   background-size: @width @line-height;
+  color: #eee;
+  background: linear-gradient(@color, @color);
 }
 
 @media screen {
