--- a/test/fixtures/at2x.out.css
+++ b/test/fixtures/at2x.out.css
@@ -7,14 +7,14 @@
   background-size: cover;
 }
 
-@media all and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .logo {
     background-image: url("/public/images/logo@2x.png");
     background-size: contain;
   }
 }
 
-@media all and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .banner {
     background-image: url("/public/images/banner@2x.png");
     background-size: cover;
