treat transition-property like transition for value prefixing
The code used to check for the css property 'transition' for css values
to prefix. 'transition' however is a shorthand of several properties
(including 'transition-property'). This change just makes 'transition-
property' follow the same logic as 'transition' for css values to
prefix.

--- a/test/fixtures/prefix-value.css
+++ b/test/fixtures/prefix-value.css
@@ -1,10 +1,12 @@
 button {
   transition: height, transform 2s, width 0.3s linear;
   background: green;
+  transition-property: transform;
 }
 
 @media screen {
   button {
-    transition: transform 1s
+    transition: transform 1s;
+    transition-property: transform;
   }
 }
