--- a/test/fixtures/prefix-value.out.css
+++ b/test/fixtures/prefix-value.out.css
@@ -3,6 +3,9 @@ button {
   -moz-transition: height, -moz-transform 2s, width 0.3s linear;
   transition: height, transform 2s, width 0.3s linear;
   background: green;
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  transition-property: transform;
 }
 
 @media screen {
@@ -10,5 +13,8 @@ button {
     -webkit-transition: -webkit-transform 1s;
     -moz-transition: -moz-transform 1s;
     transition: transform 1s;
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    transition-property: transform;
   }
 }
