--- a/test/fixtures/at2x.out.css
+++ b/test/fixtures/at2x.out.css
@@ -7,6 +7,10 @@
   background-size: cover;
 }
 
+.background {
+  background-image: url('/public/images/background.png');
+}
+
 @media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .logo {
     background-image: url("/public/images/logo@2x.png");
