Switched keyword from hi-res to at-2x for at2x

--- a/test/fixtures/at2x.css
+++ b/test/fixtures/at2x.css
@@ -1,9 +1,9 @@
 .logo {
-  background-image: url('/public/images/logo.png') hi-res;
+  background-image: url('/public/images/logo.png') at-2x;
 }
 
 .banner {
-  background-image: url('/public/images/banner.png') hi-res;
+  background-image: url('/public/images/banner.png') at-2x;
   background-size: cover;
 }
 
