Add media query support for at2x plugin
Backport of the change made in the standalone plugin:
https://github.com/reworkcss/rework-plugin-at2x/pull/2

--- a/test/fixtures/at2x.css
+++ b/test/fixtures/at2x.css
@@ -10,3 +10,9 @@
 .background {
   background-image: url('/public/images/background.png');
 }
+
+@media (min-width: 200px), (max-width: 400px) {
+  .logo {
+    background-image: url('/public/images/logo.png') at-2x;
+  }
+}
